# Medical_KG_rev

./: .env.example  .envrc  .gitignore  .pip-extra-reqs-ignore  .pre-commit-config.yaml  =0.18  =0.7.0  AI_AGENT_STANDARDS_MESSAGE.md  API Authorizations.md  ARCHITECTURE_DOC_UPDATE_STATUS.md  CHANGELOG_TORCH_ISOLATION.md  CODEBASE_REDUCTION_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_CODEBASE_DOCUMENTATION.md  DELETED_CODE.md  DEMO_README.md  DOCUMENTATION_UPDATES_COMPLETE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  END_TO_END_DEMO_SUMMARY.md  FIXES_APPLIED_SUMMARY.md  GAP_ANALYSIS_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LEGACY_DECOMMISSION_CHECKLIST.md  LEGACY_DEPENDENCIES.md  MINERU_HIERARCHY_UPDATE.md  MINERU_VLLM_SETUP_SUMMARY.md  MINERU_VLLM_SUCCESS_SUMMARY.md  MODEL_OPTIONS.md  OPENALE X_100_PAPERS_FIX.md  PROPOSAL_2_COMPLETION_SUMMARY.md  QUICKSTART_MINERU_VLLM.md  README.md  RTX_5090_COMPATIBILITY.md  RUN_DEMO_INSTRUCTIONS.md  TASKS_MD_FINAL_STATUS.md  TASKS_MD_UPDATE_STATUS.md  TORCH_ISOLATION_IMPLEMENTATION_SUMMARY.md  UTF8_ISSUE_RESOLVED.md  VENV_TROUBLESHOOTING.md  (+48 more)
.github/workflows/: ci.yml  documentation.yml
1) docs/: Chunking_Approaches.md  Embedding_Approaches.md  GAP_ANALYSIS_REMEDIATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  REMEDIATION_CHECKLIST.md  RETRIEVAL_PIPELINE_PROPOSALS.md  REVIEW_SUMMARY.md  System Architecture & Design Rationale.md  Vector_Storage_and_Retrieval.md
archive/torch-dependent-code/: ARCHIVE_MANIFEST.md  README.md  gpu_manager_original.py  metrics_original.py  vector_store_gpu_original.py
config/: chunking.yaml  dagster.yaml  docling_vlm.yaml  embeddings.yaml  gpu.yaml  mineru.yaml  vector_store.yaml
config/embedding/: namespaces.yaml  pyserini.yaml  vllm.yaml
config/monitoring/: alerts.yml  rollback_triggers.yaml
config/orchestration/: resilience.yaml
config/retrieval/: components.yaml  reranking.yaml  reranking_models.yaml
demo_output/reports/: demo_summary.json
docs/: COMPREHENSIVE_CODEBASE_DOCUMENTATION.md  api-portal.md  asyncapi.yaml  gpu-microservices.md  index.md  openapi.yaml  operational-runbook.md  schema.graphql  storage-architecture.md  storage-quickstart.md
docs/adr/: 0001-coordinator-architecture.md  0002-section-headers.md  0003-error-translation-strategy.md  0004-google-style-docstrings.md  0005-repository-documentation-standards.md  0006-domain-specific-section-headers.md  0007-automated-documentation-enforcement.md  0008-type-hint-modernization.md
docs/api/: adapters.md  api_reference.md  coordinators.md  embedding.md  gateway.md  kg.md  orchestration.md  service_architecture.md  services.md  storage.md  utils.md  validation.md
docs/architecture/: foundation.md  overview.md  torch-free-architecture.md
docs/chunking/: API.md  AdapterGuide.md  Chunkers.md  ConfigurationExamples.md  Evaluation.md  Setup.md
docs/contributing/: documentation_standards.md
docs/devops/: ci-cd.md  kubernetes.md  local-environments.md  mineru-vllm-docker-setup.md  observability.md  vllm-deployment.md
docs/diagrams/: adapter_data_flow.mmd  chunking_flow.mmd  embedding_flow.mmd  module_dependencies.mmd  orchestration_flow.mmd  orchestration_pipeline.mmd  repository_architecture.mmd  service_interactions.mmd  storage_architecture.mmd
docs/guides/: adapter-sdk.md  adapters_development_guide.md  chunking-profiles.md  chunking.md  ci_cd_pipeline.md  code_review_guidelines.md  compliance_documentation.md  configuration_reference.md  configuration_validation.md  custom-pipeline-stages.md  custom-stages.md  data-models.md  deployment_overview.md  deployment_procedures.md  developer_guide.md  development_workflow.md  disaster_recovery_plan.md  docling_migration_guide.md  embedding_adapters.md  embedding_catalog.md  embedding_migration.md  embedding_namespace_policy.md  environment_variables.md  gateway_development_guide.md  git_workflow.md  hot_reload_setup.md  ide_configuration.md  infrastructure_requirements.md  maintenance_procedures.md  migration_procedures.md  monitoring_logging.md  orchestration-pipelines.md  orchestration-pipelines.md.rej  pdf-two-phase-gate.md  pipeline-schema.json  pipeline-schema.json.rej  pipeline_extension_guide.md  pipeline_state_management.md  repository_extension_guide.md  rollback_procedures.md  (+8 more)
docs/migration/: torch-isolation-migration.md
docs/operational/: auto-scaling-guide.md  gpu-resource-optimization-guide.md  service-caching-guide.md  vlm-gpu-memory-optimization-guide.md  vlm-request-queue-guide.md
docs/operations/: embedding_rollout.md  legacy_embedding_decommission.md  retrieval-rollout.md  rollback_drills.md  tenant_isolation_pen_test.md
eval/: __init__.py  chunking_eval.py
openspec/: AGENTS.md  project.md  project_comprehensive.md  project_original.md
ops/: Dockerfile.gpu  Dockerfile.vllm  docker-compose.yml
scripts/: archive_torch_dependent_code.py  audit_tenant_isolation.py  check_chunking_dependencies.py  check_docstring_coverage.py  check_documentation.py  check_graphql_breaking_changes.py  check_method_ordering.py  check_section_headers.py  check_torch_isolation_health.sh  check_type_hints.py  ci_torch_isolation_check.py  deploy_auto_scaling.py  deploy_torch_isolation.py  deploy_vlm_blue_green.py  detect_dangling_imports.py  download_gemma3.py  download_models.py  find_duplicate_code.py  generate_api_docs.py  generate_mtls_certificates.py  install_chunking_dependencies.sh  manage_model_warmup.py  manage_service_cache.py  manage_vlm_cache.py  manage_vlm_gpu_memory.py  manage_vlm_request_queue.py  migrate_adapter_entry_points.py  migrate_namespace_policy.py  optimize_gemma3_batch_sizes.py  optimize_gpu_resources.py  optimize_grpc_performance.py  orchestration_gate_tool.py  organize_imports.py  performance_regression_test.py  pipeline_tools.py  remove_torch_dependencies.py  remove_torch_dependencies_strict.py  remove_torch_dependencies_targeted.py  rollback_embeddings.sh  rollback_to_mineru.sh  (+18 more)
site/: 404.html  index.html  objects.inv  openapi.yaml  schema.graphql
tests/: __init__.py  conftest.py  conftest.py.rej  test_basic.py
(+1281 files in other folders)
